--- a/frontend-phone-book/public/index.html
+++ b/frontend-phone-book/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,400;0,500;1,400&display=swap"
+      rel="stylesheet">
     <title>Django React Phone Book</title>
   </head>
   <body>
